# kpqclib

./: CMakeLists.txt  README.md  requirements.txt
crypto_kem/IPCC_f1/: CMakeLists.txt
crypto_kem/IPCC_f1/benchmark/: CMakeLists.txt  speed.c
crypto_kem/IPCC_f1/include/: rng.h
crypto_kem/IPCC_f1/kat/: CMakeLists.txt
crypto_kem/IPCC_f1/src/: MultiEnc.c  rng.c
crypto_kem/IPCC_f3/kat/: CMakeLists.txt
crypto_kem/IPCC_f4/: CMakeLists.txt
crypto_kem/IPCC_f4/benchmark/: CMakeLists.txt
crypto_kem/IPCC_f4/include/: rng.h
crypto_kem/IPCC_f4/kat/: CMakeLists.txt
crypto_kem/IPCC_f4/test/: CMakeLists.txt
crypto_kem/PALOMA128/const_test/: CMakeLists.txt  constant_time_test.c
crypto_kem/PALOMA128/kat/: CMakeLists.txt  KAT.c
crypto_kem/PALOMA128/metamorphic/: CMakeLists.txt  bit_contribution.c  bit_exclusion.c  meta_test.c
crypto_kem/PALOMA192/: CMakeLists.txt
crypto_kem/PALOMA192/benchmark/: CMakeLists.txt  benchmark.c
crypto_kem/PALOMA192/const_test/: CMakeLists.txt
crypto_kem/PALOMA192/include/: lsh512.h  lsh_local.h
crypto_kem/PALOMA192/kat/: CMakeLists.txt
crypto_kem/PALOMA192/metamorphic/: CMakeLists.txt  bit_contribution.c  bit_exclusion.c  meta_test.c
crypto_kem/PALOMA192/src/: lsh.c
crypto_kem/PALOMA192/test/: CMakeLists.txt
crypto_kem/PALOMA256/const_test/: CMakeLists.txt  api.h
crypto_kem/SMAUG1/: CMakeLists.txt
crypto_kem/SMAUG1/benchmark/: CMakeLists.txt  speed.c
crypto_kem/SMAUG1/const_test/: CMakeLists.txt  constant_time_test.c
crypto_kem/SMAUG1/kat/: CMakeLists.txt
crypto_kem/SMAUG1/metamorphic/: CMakeLists.txt  bit_contribution.c  meta_test.c
crypto_kem/SMAUG1/src/: kem.c  rng.c
crypto_kem/SMAUG5/: CMakeLists.txt
crypto_kem/SMAUG5/benchmark/: CMakeLists.txt
crypto_kem/SMAUG5/const_test/: CMakeLists.txt
crypto_kem/SMAUG5/kat/: CMakeLists.txt
crypto_kem/SMAUG5/metamorphic/: CMakeLists.txt  bit_contribution.h  bit_exclusion.c  bit_exclusion.h  meta_test.c
crypto_kem/SMAUG5/src/: kem.c  rng.c
crypto_kem/SMAUG5/test/: CMakeLists.txt
crypto_kem/TIGER128/: CMakeLists.txt
crypto_kem/TIGER128/benchmark/: CMakeLists.txt
crypto_kem/TIGER128/const_test/: CMakeLists.txt
crypto_kem/TIGER128/include/: TIGER_CCAKEM.h  params.h
crypto_kem/TIGER128/kat/: CMakeLists.txt  PQCgenKAT_kem.c  kat_kem.c
crypto_kem/TIGER128/metamorphic/: CMakeLists.txt  bit_contribution.c  bit_exclusion.c  meta_test.c
crypto_kem/TIGER128/src/: TIGER_CCAKEM.c  TIGER_CPAPKE.c  main.c
crypto_kem/TIGER128/test/: CMakeLists.txt  main.c
crypto_kem/TIGER256/: CMakeLists.txt
crypto_kem/TIGER256/benchmark/: CMakeLists.txt  speed.c
crypto_kem/TIGER256/const_test/: CMakeLists.txt  kat_kem.c
crypto_kem/TIGER256/include/: params.h
crypto_kem/TIGER256/kat/: CMakeLists.txt  PQCgenKAT_kem.c
crypto_kem/TIGER256/metamorphic/: CMakeLists.txt  bit_exclusion.c  meta_test.c
crypto_kem/TIGER256/src/: TIGER_CCAKEM.c  TIGER_CPAPKE.c
crypto_kem/TIGER256/test/: CMakeLists.txt
crypto_kem/ntruplus576/: CMakeLists.txt
crypto_kem/ntruplus576/benchmark/: CMakeLists.txt
crypto_kem/ntruplus576/const_test/: CMakeLists.txt  constant_time_test.c
crypto_kem/ntruplus576/include/: crypto_stream.h  params.h  poly.h
crypto_kem/ntruplus576/kat/: CMakeLists.txt
crypto_kem/ntruplus576/metamorphic/: CMakeLists.txt  bit_contribution.c  meta_test.c
crypto_kem/ntruplus576/src/: aes256ctr.c  kem.c  ntt.c  rng.c
crypto_kem/ntruplus576/test/: CMakeLists.txt
crypto_sign/AImer-L5/: CMakeLists.txt
crypto_sign/AImer-L5/benchmark/: CMakeLists.txt  speed.c
crypto_sign/AImer-L5/const_test/: CMakeLists.txt
crypto_sign/AImer-L5/include/: aim256.h  aimer.h
crypto_sign/AImer-L5/kat/: CMakeLists.txt  PQCgenKAT_sign.c  kat_sign.c
crypto_sign/AImer-L5/metamorphic/: CMakeLists.txt  bit_contribution.c  bit_exclusion.c  meta_test.c
crypto_sign/AImer-L5/src/: rng.c
crypto_sign/AImer-L5/tests/: CMakeLists.txt  main.c  test_aim  test_aim.c  test_sign
crypto_sign/EnhpqsigRM613/: CMakeLists.txt
crypto_sign/EnhpqsigRM613/benchmark/: CMakeLists.txt  speed.c
crypto_sign/EnhpqsigRM613/const_test/: CMakeLists.txt  api.h  constant_time_test.c
crypto_sign/EnhpqsigRM613/include/: common.h  nearest_vector.h  parm.h
crypto_sign/EnhpqsigRM613/kat/: CMakeLists.txt  PQCgenKAT_sign.c  api.h  kat_sign.c
crypto_sign/EnhpqsigRM613/metamorphic/: CMakeLists.txt  bit_contribution.c  bit_exclusion.c  bit_verify.c  meta_test.c
crypto_sign/EnhpqsigRM613/src/: common.c  keypair.c  nearest_vector.c  rm.c  sign.c
crypto_sign/EnhpqsigRM613/tests/: CMakeLists.txt
crypto_sign/GCKSign-II/: CMakeLists.txt
crypto_sign/GCKSign-II/benchmark/: CMakeLists.txt  speed.c
crypto_sign/GCKSign-II/const_test/: CMakeLists.txt  constant_time_test.c  kat_sign.c
crypto_sign/GCKSign-II/include/: sign.h
crypto_sign/GCKSign-II/kat/: CMakeLists.txt
crypto_sign/GCKSign-II/metamorphic/: CMakeLists.txt  bit_exclusion.h  meta_test.c
crypto_sign/GCKSign-II/src/: sample.c  sign.c
crypto_sign/GCKSign-II/test/: CMakeLists.txt
crypto_sign/HAETAE2/: CMakeLists.txt
crypto_sign/HAETAE2/benchmark/: CMakeLists.txt
crypto_sign/HAETAE2/const_test/: CMakeLists.txt
crypto_sign/HAETAE2/include/: packing.h  poly.h  reduce.h  rounding.h  sampler.h
crypto_sign/HAETAE2/kat/: CMakeLists.txt
crypto_sign/HAETAE2/metamorphic/: CMakeLists.txt  meta_test.c
crypto_sign/HAETAE2/src/: sign.c  symmetric-shake.c
crypto_sign/HAETAE2/test/: CMakeLists.txt
crypto_sign/HAETAE3/: CMakeLists.txt
crypto_sign/HAETAE3/benchmark/: CMakeLists.txt
crypto_sign/HAETAE3/const_test/: CMakeLists.txt  constant_time_test.c
crypto_sign/HAETAE3/include/: polydbl.h  polyvec.h  symmetric.h
crypto_sign/HAETAE3/kat/: CMakeLists.txt
crypto_sign/HAETAE3/metamorphic/: CMakeLists.txt  bit_exclusion.c  bit_verify.c  meta_test.c
crypto_sign/HAETAE3/src/: packing.c  (+3 more)
crypto_sign/MQS256-112-72/: CMakeLists.txt
crypto_sign/NCCSign2-ori/: CMakeLists.txt
crypto_sign/NCCSign3-ori/: CMakeLists.txt
crypto_sign/Peregrine512/: CMakeLists.txt
crypto_sign/Solmae1024/: CMakeLists.txt
crypto_sign/Solmae512/: CMakeLists.txt
(+353 files in other folders)
