cmake_minimum_required(VERSION 3.18)
project(KPQClean  LANGUAGES CXX VERSION 1.0)

if(MSVC)
  set(C_FLAGS /nologo /O2 /W4 /wd4146 /wd4244)
else()
  set(C_FLAGS -O3 -c -fomit-frame-pointer -fPIC -Wall -Wextra)
endif()


#Crypto_kem
add_subdirectory(common)
add_subdirectory(crypto_kem/SMAUG1)
add_subdirectory(crypto_kem/SMAUG3)
add_subdirectory(crypto_kem/SMAUG5)
add_subdirectory(crypto_kem/TIGER128)
add_subdirectory(crypto_kem/TIGER192)
add_subdirectory(crypto_kem/TIGER256)
add_subdirectory(crypto_kem/ntruplus576)
add_subdirectory(crypto_kem/ntruplus768)
add_subdirectory(crypto_kem/ntruplus864)
add_subdirectory(crypto_kem/ntruplus1152)
add_subdirectory(crypto_kem/PALOMA128)
add_subdirectory(crypto_kem/PALOMA192)
add_subdirectory(crypto_kem/PALOMA256)
add_subdirectory(crypto_kem/IPCC_f1)
add_subdirectory(crypto_kem/IPCC_f3)
add_subdirectory(crypto_kem/IPCC_f4)


# Crypto_sign
add_subdirectory(crypto_sign/HAETAE2)
add_subdirectory(crypto_sign/HAETAE3)
add_subdirectory(crypto_sign/HAETAE5)
add_subdirectory(crypto_sign/AImer-L1)
add_subdirectory(crypto_sign/AImer-L3)
add_subdirectory(crypto_sign/AImer-L5)
add_subdirectory(crypto_sign/NCCSign2-ori)
add_subdirectory(crypto_sign/NCCSign3-ori)
add_subdirectory(crypto_sign/NCCSign5-ori)
add_subdirectory(crypto_sign/GCKSign-II)
add_subdirectory(crypto_sign/GCKSign-III)
add_subdirectory(crypto_sign/GCKSign-V)
add_subdirectory(crypto_sign/EnhpqsigRM612)
add_subdirectory(crypto_sign/EnhpqsigRM613)
add_subdirectory(crypto_sign/Peregrine512)
add_subdirectory(crypto_sign/Peregrine1024)
add_subdirectory(crypto_sign/MQS256-72-46)
add_subdirectory(crypto_sign/MQS256-148-96)
add_subdirectory(crypto_sign/MQS256-112-72)
add_subdirectory(crypto_sign/Solmae1024)
add_subdirectory(crypto_sign/Solmae512_)


